style(title): updated name title

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -73,7 +73,7 @@
         "description": "Development of web applications with Angular and TypeScript, using agile methodologies for software development. Implementation of innovative and efficient solutions to meet clients' needs. Teamwork to ensure product delivery."
       },
       {
-        "title": "Web Developer (Angular Semi Sr)",
+        "title": "Web Developer (Angular Jr)",
         "company": "SoliduSystems",
         "date": "Ene 2020 - MAR 2023",
         "description": "Development of web applications with Angular and TypeScript. Implementation of APIs for billing, stamps, and access control. Teamwork to ensure product delivery."
