--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -73,7 +73,7 @@
         "description": "Desarrollo de aplicaciones web con Angular y TypeScript, utilizando metodologías agiles para el desarrollo de software. Implementación de soluciones innovadoras y eficientes para satisfacer las necesidades de los clientes. Trabajo en equipo para asegurar la entrega del producto."
       },
       {
-        "title": "Desarrollador Web (Angular)",
+        "title": "Desarrollador Web (Angular Jr)",
         "company": "SoliduSystems",
         "date": "Ene 2020 - MAR 2023",
         "description": "Desarrollo de aplicaciones web con Angular y TypeScript. Implementación de apis para facturación, timbres y control de acceso. Trabajo en equipo para asegurar la entrega del producto."
