chore: added new properties

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -4,6 +4,8 @@
     "name": "Hi, I´m Jesus Manuel",
     "last-name": "Liendo Palafox",
     "description": "I am a web developer with experience in the development of web and mobile applications (Responsive). My main focus is creating intuitive and functional solutions that meet users' needs. I have over 6 years of experience in web application development using technologies such as HTML, CSS, JavaScript, TypeScript, Angular, among others.",
+    "url-cv": "pdf/CV-En-JesusManuelLiendoPalafox.pdf",
+    "name-download-cv": "CV-jesusliendo-en.pdf",
     "text-cv": "Download CV",
     "text-email": "Email"
   },
