--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -5,6 +5,8 @@
     "last-name": "Liendo Palafox",
     "description": "Soy un desarollador web con experiencia en el desarrollo de aplicaciones web y móviles(Responsive). Mi enfoque principal es la creación de soluciones intuitivas y funcionales que satisfacen las necesidades de los usuarios. Tengo mas de 6 años de experiencia en el desarrollo de aplicaciones web utilizando tecnologías como HTML, CSS, JavaScript, TypeScript, Angular entre otras.",
     "text-cv": "Descargar CV",
+    "url-cv": "pdf/CV-Es-JesusManuelLiendoPalafox.pdf",
+    "name-download-cv": "CV-jesusliendo-es.pdf",
     "text-email": "Correo"
   },
   "skills": {
