fix: Update title en.json

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -89,7 +89,7 @@
     ]
   },
   "testimonials": {
-    "title": "👨‍💼 Testimonios",
+    "title": "👨‍💼 Testimonials",
     "list-testimonials": [
       {
         "name": "✨ Pepe Flores ✨",
